Opened 15 years ago
Closed 15 years ago
#5947 closed bug (fixed)
BePDF doesn't close - hangs around in Deskbar
Reported by: | luroh | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | System/Kernel | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Change History (8)
follow-up: 3 comment:1 by , 15 years ago
comment:2 by , 15 years ago
It's happening much less now IMO. I just opened and closed (with Alt+W and Alt+Q) 30 documents very quickly one after another, and then it happened again. So, much better but not completely fixed apparently.
follow-up: 4 comment:3 by , 15 years ago
Replying to laplace:
Is this reproducible with this version of BePDF too?
Yes. I can't say I notice any difference with the older version.
comment:4 by , 15 years ago
comment:5 by , 15 years ago
I have to correct myself. I think I tested with BePDF-1.1.1b3-r1a2-x86-gcc2-2010-05-02.zip... The one you linked (...2010-05-08) is doing less well, esp. when opening 5 or more big pdfs and Alt+Q to close them all.
comment:6 by , 15 years ago
Actually I would have been surprised if there were any differences in behaviour between the version from 2010-05-02 and 2010-05-08, because the only difference is that the older was built on Haiku and has the Single Launch flag set and the later was built on BeOS R5 and has the Multiple Launch flag set.
Anyway I was curious if there are any differences, that's why I asked.
Thank you for testing with it.
I will try to fix the problem in BePDF when time permits.
comment:7 by , 15 years ago
Owner: | changed from | to
---|---|
Status: | new → in-progress |
It might be a problem of our FIFO implementation, I'm currently looking into it.
comment:8 by , 15 years ago
Component: | Applications → System/Kernel |
---|---|
Resolution: | → fixed |
Status: | in-progress → closed |
Fixed in hrev37836.
Is this reproducible with this version of BePDF too?
http://haiku-files.org/files/optional-packages/BePDF-1.1.1b3-r1a2-x86-gcc2-2010-05-08.zip