* I see no reason for the fActive check here. Until Ingo enlightens me, this   fixes bug #5947, IOW BePDF should now close fine again :-)

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@37836 a95241bf-73f2-0310-859d-f6bbb57e9c96